k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: student-management
  namespace: student-test
  labels:
    app: student-management

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student-management

  template:
    metadata:
      labels:
        app: student-management

    spec:
      containers:
      - name: student-management

        # Image créée et envoyée par Jenkins vers Docker Hub
        image: amaidiaabdelmajiddo/student-management:latest

        # Toujours récupérer la dernière version depuis Docker Hub
        imagePullPolicy: Always
         ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"
