k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: student-service
  namespace: student-test

spec:

  selector:
    app: student-management

  ports:
  - port: 8080
    targetPort: 8080

  type: NodePort
